Fix bad width on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a {
 }
 
 .container__narrow {
-  width: 800px;
+  max-width: 800px;
 }
 
 .container--sub {
